# DaedalusForge

./: .gitignore  README.md  dockerfile  make  pyproject.toml  requirements-dev.txt  requirements.txt
app/: agents.py  main.py  orchestrator.py  pre-commit-config.yaml  process_config.yaml  process_config_prompt.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  safe_eval.py
automations/: Notebook_de_Prospecção.ipynb  lançamento.ipynb  lançamento_rev.ipynb  lead_prospecting_agent.ipynb
configs/: invalid_edge_config.yaml  plan_and_execute.yaml  process_config.yaml  process_config_prompt.md  supervisor_financial_analysis.yaml
notebooks/automations/: lançamento.ipynb  selenium.ipynb
notebooks/study_projects/: Imersão_Agentes_de_IA_Alura_+_Google_Gemini.ipynb  Imersão_Agentes_de_IA_Alura_+_Google_Gemini_Aula_02.ipynb  [Imersão Dev Agentes de IA] Construindo a base de conhecimento com RAG.txt
src/: agents.py  main.py  model.py  orchestrator.py  safe_eval.py
study_projects/: Imersão_Agentes_de_IA_Alura_+_Google_Gemini.ipynb  Imersão_Agentes_de_IA_Alura_+_Google_Gemini_ipynb_Aula_01.ipynb  [Imersão Dev Agentes de IA] Orquestração do agente com LangGraph.txt  google_gemini_ai_agent_course.ipynb
tests/features/: orchestrator_execution.feature
tests/step_definitions/: test_orchestrator.py
