[project]
name = "multiagent-orchestrator"
version = "0.1.0"
description = "Plataforma genérica de orquestração de múltiplos agentes de IA (Python + YAML DSL)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B","SIM"]
ignore = []
exclude = ["build","dist",".venv","venv"]
fix = true

[tool.ruff.lint.isort]
known-first-party = ["agents", "models", "safe_eval", "orchestrator"]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = false
no_implicit_optional = true
ignore_missing_imports = true
exclude = "(^build/|^dist/|^venv/|^\\.venv/)"

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
testpaths = ["tests"]
pythonpath = ["."]
# Add this line:
bdd_features_base_dir = "tests/features"
